# MyOpenGL-Playground

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.h  Mesh.h  Model.h  Shader.h  Texture.h  cube.fs  cube.vs  light.fs  loadTexture.h  main.cpp  screen.fs  screen.vs  shader.fs  shader.vs  skybox.vs  stb_image_setup.cpp
